--- a/package.json
+++ b/package.json
@@ -17,3 +17,17 @@
         "install": "cd client && npm install",
         "build": "cd client && npm run build"
     },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.7"
+    },
+    "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.12.14"
+}
+}
