--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "booksearch",
-    "homepage": "https://github.com/aseppala98/react-booksearch#readme",
+    "homepage": "https://github.com/AM-Cowles/React-Booksearch#readme",
     "version": "1.0.0",
-    "description": "React Book Search",
+    "description": "Book Search",
     "main": "server.js",
     "engines": {
     "node": "14.x"
